--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+From 1e34522 (package):
+======================
+
+In epic/data_interface.py,
+
+(*) Remove initializing epic_path
+
+In epic/lwa_operations.py,
+
+(*) Remove initializing epic_path
+
 From ae62e22 (package):
 ======================
 
