Add convert_MWAVCS_data_to_EPIC_format.py to repo
From 04dbbff (package):
======================

(*) Add scripts/convert_MWAVCS_data_to_EPIC_format.py to repo
(*) Add .gitignore to repo

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+From 04dbbff (package):
+======================
+
+(*) Add scripts/convert_MWAVCS_data_to_EPIC_format.py to repo
+(*) Add .gitignore to repo
+
 From be58a60 (package):
 ======================
 
