--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+From 97f6998 (package):
+======================
+
+(*) Update scripts/convert_LWA_TBN_data_to_EPIC_format.py
+
 From f8ea64d (package):
 ======================
 
