Initiate in-place accumulation of image attributes
From 40dd4de (extimg):
=====================

In epic/antenna_array.py,

(*) In imagr() member function of class Image, initialize HDF5
containers for accumulated images, beams, visibilities, and aperture
weights.
(*) Create member function accumulate_inplace() under class Image
for accumulating images, beams, visibilies, and aperture weights in
place in an external file
(*) Update docstring of class Image accordingly

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+From 40dd4de (extimg):
+=====================
+
+In epic/antenna_array.py,
+
+(*) In imagr() member function of class Image, initialize HDF5
+containers for accumulated images, beams, visibilities, and aperture
+weights.
+(*) Create member function accumulate_inplace() under class Image
+for accumulating images, beams, visibilies, and aperture weights in
+place in an external file
+(*) Update docstring of class Image accordingly
+
 From 7dc4e33 (extimg):
 =====================
 
