--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,25 @@
+From 948423e (extimg):
+=====================
+
+In epic/antenna_array.py,
+
+(*) In imagr() member function of class Image, invoke a call to
+evalAutoCorr() 
+(*) In imagr() member function of class Image, initialize HDF5
+containers for autocorr and autowts.
+(*) In imagr() member function of class Image, initialize HDF5
+containers for averaged data sets
+(*) In stack() member function of class Image, initialize HDF5
+containers for autocorr and autowts.
+(*) In stack() member function of class Image, initialize HDF5
+containers for averaged data sets
+(*) In accumulate_inplace() member function of class Image,
+initialize HDF5 containers for autocorr and autowts.
+(*) In accumulate_inplace() member function of class Image,
+initialize HDF5 containers for averaged data sets
+(*) Start creating a member function average() under class Image.
+Update class docstring accordingly
+
 From 40dd4de (extimg):
 =====================
 
