--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,21 @@
+From 94aa6eb (master):
+=====================
+
+In epic/antenna_array.py,
+
+(*) In member function evalAutoCorr() of class Image, pass input pol
+in call to member function makeAutoCorrCube() of class AntennaArray. 
+(*) In member function avgAutoCorr() of class, add keyword input pol
+to select and process specific polarization(s). Update member function
+docstring accordingly
+(*) In member function evalAutoCorr() of class AntennaArray, add input
+keyword pol to select and process specific polarization(s). Update
+member function docstring accordingly. Pass input pol in call to
+member function avgAutoCorr() of class AntennaArray
+(*) In member function makeAutoCorrCube() of class AntennaArray, pass
+input pol in call to member function evalAutoCorr() of class
+AntennaArray
+
 From 884326e (master):
 =====================
 
